fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #ffffff #111827;
+  }
+  
